Update output style

--- a/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
@@ -138,7 +138,7 @@
    "source": [
     "def print_dict(d: dict) -> None:\n",
     "    for k, v in d.items():\n",
-    "        print(f\"\\n** {k} **\\n---\\n{v}\")"
+    "        print(f\"\\n{k.capitalize()}\\n---\\n{v}\".replace('\\n\\n', '\\n'))"
    ]
   },
   {
@@ -648,7 +648,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "** reasoning **\n",
+      "Reasoning\n",
       "---\n",
       "The criterion for this task is conciseness. To evaluate the submission on this basis, let's consider the following:\n",
       "1. The submission begins with a brief introduction to the topic, which sets the context for the following points. It does not provide any unnecessary information.\n",
@@ -658,11 +658,11 @@
       "Therefore, the answer is:\n",
       "Y\n",
       "\n",
-      "** score **\n",
+      "Score\n",
       "---\n",
       "1\n",
       "\n",
-      "** value **\n",
+      "Value\n",
       "---\n",
       "Y\n"
      ]
@@ -743,7 +743,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "** reasoning **\n",
+      "Reasoning\n",
       "---\n",
       "The criterion for this assessment is correctness, accuracy, and factuality. We need to verify if the submitted answer is correct and factual based on the given input and the reference.\n",
       "The input asks for the number of jobs created in the country due to the electric vehicle manufacturing industry. \n",
@@ -752,11 +752,11 @@
       "Therefore, the submission meets the criteria of correctness, accuracy, and factuality.\n",
       "Y\n",
       "\n",
-      "** score **\n",
+      "Score\n",
       "---\n",
       "1\n",
       "\n",
-      "** value **\n",
+      "Value\n",
       "---\n",
       "Y\n"
      ]
@@ -807,7 +807,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "** reasoning **\n",
+      "Reasoning\n",
       "---\n",
       "The criterion to assess is the correctness, accuracy, and factualness of the submission.\n",
       "1. Correctness: The submission provides details about the number of jobs created due to the investment in electric vehicle manufacturing by Ford and GM. These details align with the input question.\n",
@@ -816,11 +816,11 @@
       "Based on this analysis, the submission fails to meet the factualness criterium, even though it is correct and accurate according to the information provided in the submission itself.\n",
       "N\n",
       "\n",
-      "** score **\n",
+      "Score\n",
       "---\n",
       "0\n",
       "\n",
-      "** value **\n",
+      "Value\n",
       "---\n",
       "N\n"
      ]
