Minor update to explanation

--- a/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
@@ -155,7 +155,9 @@
    "source": [
     "### Read In Text Document\n",
     "\n",
-    "In the below code snippet, we read the text file and split the document into chunks. This document is a State of the Union message from the President of the United States to the United States Congress."
+    "The document we will use for this examples is a State of the Union message from the President of the United States to the United States Congress.\n",
+    "\n",
+    "In the below code snippet, we read the text file in."
    ]
   },
   {
@@ -174,7 +176,9 @@
    "id": "a87d9450",
    "metadata": {},
    "source": [
-    "### Split The Document Into Chunks"
+    "### Split The Document Into Chunks\n",
+    "\n",
+    "We then split this document into chunks."
    ]
   },
   {
