Fix variable name error

--- a/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
@@ -484,9 +484,9 @@
    "outputs": [],
    "source": [
     "def query_qabot(qabot, query: str) -> str:\n",
-    "    query_result = qabot(dict(query=new_query))[\"result\"]\n",
-    "    print(f\"{new_query}\\n---\\n{query_result}\")\n",
-    "    return query_result"
+    "    query_res = qabot(dict(query=query))[\"result\"]\n",
+    "    print(f\"{query}\\n---\\n{query_res}\")\n",
+    "    return query_res"
    ]
   },
   {
