openai model deprecated

--- a/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
@@ -404,7 +404,7 @@
    "source": [
     "### Add Embedded Data to KDB.AI Table\n",
     "\n",
-    "We can now store our data in KDB.AI by passing a few parameters to `KDBAI.from_texts`:\n",
+    "We can now store our data in KDB.AI by passing a few parameters to `KDBAI.add_texts`:\n",
     "\n",
     "- `session` our handle to talk to KDB.AI\n",
     "- `table_name` our KDB.AI table name\n",
@@ -523,8 +523,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# select two llm models (OpenAI text-davinci-003, HuggingFaceHub google/flan-t5-xxl(designed for short answers))\n",
-    "llm_openai = OpenAI(model=\"text-davinci-003\", max_tokens=512)\n",
+    "# select two llm models (OpenAI gpt-3.5-turbo-instruct, HuggingFaceHub google/flan-t5-xxl(designed for short answers))\n",
+    "llm_openai = OpenAI(model=\"gpt-3.5-turbo-instruct\", max_tokens=512)\n",
     "llm_flan = HuggingFaceHub(\n",
     "    repo_id=\"google/flan-t5-xxl\", model_kwargs={\"temperature\": 0.5, \"max_length\": 512}\n",
     ")"
