updated langchain packages

--- a/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
@@ -82,13 +82,13 @@
    "source": [
     "# langchain packages\n",
     "from langchain.chains import RetrievalQA\n",
-    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain_openai import ChatOpenAI\n",
     "from langchain.document_loaders import TextLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
-    "from langchain.embeddings import OpenAIEmbeddings\n",
-    "from langchain.vectorstores import KDBAI\n",
+    "from langchain_openai import OpenAIEmbeddings\n",
+    "from langchain_community.vectorstores import KDBAI\n",
     "from langchain import HuggingFaceHub\n",
-    "from langchain.llms import OpenAI\n",
+    "from langchain_openai import OpenAI\n",
     "from langchain.chains.question_answering import load_qa_chain"
    ]
   },
@@ -587,7 +587,7 @@
    ],
    "source": [
     "# OpenAI - run the chain on the query and the related chunks from the documentation\n",
-    "chain_openAI.run(input_documents=query_sim, question=query)"
+    "chain_openAI.invoke({'input_documents':query_sim, 'question':query})['output_text']"
    ]
   },
   {
@@ -606,7 +606,7 @@
    ],
    "source": [
     "# HugginFace - run the chain on the query and the related chunks from the documentation\n",
-    "chain_HuggingFaceHub.run(input_documents=query_sim, question=query)"
+    "chain_HuggingFaceHub.invoke({'input_documents':query_sim, 'question':query})['output_text']"
    ]
   },
   {
@@ -681,7 +681,7 @@
    "source": [
     "print(query)\n",
     "print(\"-----\")\n",
-    "print(qabot(dict(query=query))[\"result\"])"
+    "print(qabot.invoke(dict(query=query))[\"result\"])"
    ]
   },
   {
@@ -702,7 +702,7 @@
     "def query_qabot(qabot, query: str):\n",
     "    print(new_query)\n",
     "    print(\"---\")\n",
-    "    return qabot(dict(query=new_query))[\"result\"]"
+    "    return qabot.invoke(dict(query=new_query))[\"result\"]"
    ]
   },
   {
