--- a/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
@@ -76,11 +76,11 @@
    "source": [
     "# langchain packages\n",
     "from langchain.chains import RetrievalQA\n",
-    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain_openai import ChatOpenAI\n",
     "from langchain.document_loaders import TextLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
-    "from langchain.embeddings import OpenAIEmbeddings\n",
-    "from langchain.vectorstores import KDBAI"
+    "from langchain_openai import OpenAIEmbeddings\n",
+    "from langchain_community.vectorstores import KDBAI"
    ]
   },
   {
@@ -484,7 +484,7 @@
    "outputs": [],
    "source": [
     "def query_qabot(qabot, query: str) -> str:\n",
-    "    query_res = qabot(dict(query=query))[\"result\"]\n",
+    "    query_res = qabot.invoke(dict(query=query))[\"result\"]\n",
     "    print(f\"{query}\\n---\\n{query_res}\")\n",
     "    return query_res"
    ]
