update kdbai endpoint

--- a/metadata_filtering/metadata_filtering_demo.ipynb
+++ b/metadata_filtering/metadata_filtering_demo.ipynb
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,14 +649,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KDB.AI endpoint: https://cloud.kdb.ai/instance/ltvwkbv9vc\n",
+      "KDB.AI endpoint: your_kdbai_endpoint\n",
       "KDB.AI API key: ········\n"
      ]
     }
