--- a/multimodal_RAG_unified_text/multi_modal_demo.ipynb
+++ b/multimodal_RAG_unified_text/multi_modal_demo.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Multimodal Retrieval Augmented Generation (RAG)\n",
-    "This example explores preparing, embedding, and storing both text and image data within a KDB.AI vector database. Our goal is to store both images and text within the same vector space so we can search over both modalities at the same time. KDB.AI can then be used as a retrieval tool within a RAG pipeline for both text and images, making it a multimodal retriever. \n",
+    "This example explores preparing, embedding, and storing both text and image data within a KDB.AI vector database. Our goal is to store both images and text descriptions within the same vector space so we can search over both modalities at the same time. KDB.AI can then be used as a retrieval tool within a RAG pipeline for both text and images data, making it a multimodal retriever. \n",
     "\n",
     "The dataset we are working with contains images of several different animals, and text descriptions of those animals. After implementation, a user should be able to write a query regarding any of these animals and get returned both images and text related to the animal of interest.\n",
     "\n",
