update multimodal RAG unified text sample

--- a/multimodal_RAG_unified_text/multi_modal_demo.ipynb
+++ b/multimodal_RAG_unified_text/multi_modal_demo.ipynb
@@ -28,17 +28,7 @@
    "metadata": {},
    "source": [
     "## 0. Setup\n",
-    "Imports, versioning, and API Keys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install pandas==2.1.3\n",
-    "!pip install openai==1.3.7"
+    "Imports and API Keys"
    ]
   },
   {
