Update multimodal RAG ImageBind sample

--- a/multimodal_RAG_ImageBind/multi_modal_ImageBind.ipynb
+++ b/multimodal_RAG_ImageBind/multi_modal_ImageBind.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 4.47G/4.47G [01:49<00:00, 43.8MB/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████| 4.47G/4.47G [01:48<00:00, 44.4MB/s]\n"
      ]
     },
     {
@@ -1681,7 +1681,7 @@
        ")"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1711,7 +1711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1771,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1782,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1801,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1813,12 +1813,12 @@
     "    new_row = {'path': path,\n",
     "               'media_type':media_type,\n",
     "               'embeddings':embedding}\n",
-    "    df = df.append(new_row, ignore_index=True)"
+    "    df = pd.concat([df, pd.DataFrame([new_row])], ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -1829,7 +1829,7 @@
        "(12, 3)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1841,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1906,8 +1906,8 @@
        "</div>"
       ],
       "text/plain": [
-       "                              path media_type  \\\n",
-       "0          ../data/images/bat1.jpg      image   \n",
+       "                              path media_type   \n",
+       "0          ../data/images/bat1.jpg      image  \\\n",
        "1          ../data/images/bat2.jpg      image   \n",
        "2         ../data/images/bear1.jpg      image   \n",
        "3         ../data/images/bear2.jpg      image   \n",
@@ -1921,7 +1921,7 @@
        "4  [0.032080155, 0.014477748, 0.035794426, -0.019...  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1933,7 +1933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1945,12 +1945,12 @@
     "    new_row = {'path': path,\n",
     "               'media_type':media_type,\n",
     "               'embeddings':embedding}\n",
-    "    df = df.append(new_row, ignore_index=True)"
+    "    df = pd.concat([df, pd.DataFrame([new_row])], ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1959,7 +1959,7 @@
        "(18, 3)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1971,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2114,8 +2114,8 @@
        "</div>"
       ],
       "text/plain": [
-       "                               path media_type  \\\n",
-       "0           ../data/images/bat1.jpg      image   \n",
+       "                               path media_type   \n",
+       "0           ../data/images/bat1.jpg      image  \\\n",
        "1           ../data/images/bat2.jpg      image   \n",
        "2          ../data/images/bear1.jpg      image   \n",
        "3          ../data/images/bear2.jpg      image   \n",
@@ -2155,7 +2155,7 @@
        "17  [0.015550813, -2.795455, -0.6351272, 2.0564396...  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2175,7 +2175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2188,14 +2188,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KDB.AI endpoint: your_kdb.ai_endpoint\n",
+      "KDB.AI endpoint: your_kdbai_endpoint\n",
       "KDB.AI API key: ········\n"
      ]
     }
@@ -2216,7 +2216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2226,7 +2226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2248,7 +2248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2262,7 +2262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2279,14 +2279,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:02<00:00,  2.82s/it]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████| 1/1 [00:01<00:00,  1.54s/it]\n"
      ]
     }
    ],
@@ -2301,7 +2301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -2446,8 +2446,8 @@
        "</div>"
       ],
       "text/plain": [
-       "                               path media_type  \\\n",
-       "0           ../data/images/bat1.jpg      image   \n",
+       "                               path media_type   \n",
+       "0           ../data/images/bat1.jpg      image  \\\n",
        "1           ../data/images/bat2.jpg      image   \n",
        "2          ../data/images/bear1.jpg      image   \n",
        "3          ../data/images/bear2.jpg      image   \n",
@@ -2487,7 +2487,7 @@
        "17  [0.015550813, -2.795455, -0.6351272, 2.0564396...  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2509,7 +2509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2526,7 +2526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2536,7 +2536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2581,7 +2581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2591,7 +2591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2632,7 +2632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2642,7 +2642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2698,7 +2698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2780,7 +2780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2802,7 +2802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2812,7 +2812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2822,7 +2822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2847,7 +2847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2875,14 +2875,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " The first image shows a green caterpillar with black spots and a black head, which is likely a tobacco hornworm. The second image shows a brown and yellow caterpillar with white spots, which is likely a fall webworm.\n"
+      " The first image appears to be a green caterpillar with black dots and a white stripe along its side. This is likely a tobacco hornworm, a common caterpillar found in North America. The second image is a hairy caterpillar with black and white markings. This is likely a fall webworm, a caterpillar that is found in North America and Europe.\n"
      ]
     }
    ],
