Update sample data source

--- a/metadata_filtering/metadata_filtering_demo.ipynb
+++ b/metadata_filtering/metadata_filtering_demo.ipynb
@@ -12,7 +12,9 @@
     "2. Data Import and Exploration with PandasAI\n",
     "3. Set Up KDB.AI Vector Database\n",
     "4. Insert Movie Data into the KDB.AI table\n",
-    "5. Run Filtered Similarity Searches on our KDB.AI vector database"
+    "5. Run Filtered Similarity Searches on our KDB.AI vector database\n",
+    "\n",
+    "Movie Dataset Source: https://www.kaggle.com/datasets/jrobischon/wikipedia-movie-plots"
    ]
   },
   {
