Updating temporal similarity search samples

--- a/TSS_transformed/Temporal_Similarity_Search_Transformed_Demo.ipynb
+++ b/TSS_transformed/Temporal_Similarity_Search_Transformed_Demo.ipynb
@@ -169,6 +169,8 @@
     "## 3. Generate Synthetic Market Time Series Data\n",
     "Create 50,000 data points for example stocks 'AAA' and 'BBB' and insert them into a dataframe\n",
     "\n",
+    "**Note:** To generate data with q, you will need a pykx license which can be attained by following the steps in the [documentation](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html#download-your-kdbai-license). This involves following the 'KDB.AI Server' signup instructions partially.\n",
+    "\n",
     "The dataframe's columns will include:\n",
     "- index: The index of the time series window\n",
     "- time: When the trade took place\n",
