--- a/TSS_transformed/Temporal_Similarity_Search_Transformed_Demo.ipynb
+++ b/TSS_transformed/Temporal_Similarity_Search_Transformed_Demo.ipynb
@@ -37,7 +37,6 @@
    "outputs": [],
    "source": [
     "# KX Dependencies\n",
-    "import pykx as kx\n",
     "import kdbai_client as kdbai\n",
     "# Other Dependencies\n",
     "import pandas as pd\n",
@@ -166,13 +165,9 @@
    "id": "8117034d-d12e-40bf-84b7-e30b26ceb352",
    "metadata": {},
    "source": [
-    "## 3. Generate Synthetic Market Time Series Data\n",
-    "Create 50,000 data points for example stocks 'AAA' and 'BBB' and insert them into a dataframe\n",
+    "## 3. Load Synthetic Market Time Series Data\n",
+    "We have pre-generated 50,000 data points for example stocks 'AAA' and 'BBB' in a parquet file called `marketTrades.parquet`. Let's load these to a dataframe where:\n",
     "\n",
-    "**Note:** To generate data with q, you will need a pykx license which can be attained by following the steps in the [documentation](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html#download-your-kdbai-license). This involves following the 'KDB.AI Server' signup instructions partially.\n",
-    "\n",
-    "The dataframe's columns will include:\n",
-    "- index: The index of the time series window\n",
     "- time: When the trade took place\n",
     "- sym: The symbol of the stock being traded\n",
     "- qty: The quantity of stock traded\n",
@@ -186,22 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "D = 1000 # Sliding Window Size\n",
-    "kx.q('\\S 100')\n",
-    "kx.q('''\n",
-    "gen_marketTrades: { [num;ticker]\n",
-    "    :marketTrades:: update price:{max(abs -0.5 + x + y;5.0)}\\[first price; count[i]?1.0] from \n",
-    "                        `time xasc ([] time:(.z.d-30)+num?15D00:00:00; \n",
-    "                        sym:num#ticker; \n",
-    "                        qty:1000*1+num?10;\n",
-    "                        price:num#25.0)\n",
-    "    };\n",
-    "''')\n",
-    "df1 = kx.q('gen_marketTrades[50000;`AAA]').pd() # Create 50k records for AAA\n",
-    "df2 = kx.q('gen_marketTrades[50000;`BBB]').pd() # Create 50k records for BBB\n",
-    "# Concatenate the DataFrames\n",
-    "df = pd.concat([df1, df2], ignore_index=True)\n",
-    "memory_start=get_memory_usage()"
+    "df = pd.read_parquet('data/marketTrades.parquet')"
    ]
   },
   {
@@ -223,6 +203,7 @@
    "outputs": [],
    "source": [
     "# Create the vector column\n",
+    "D = 1000 # Sliding Window Size\n",
     "vecdf = df.groupby(['sym']).apply(\n",
     "    lambda x: pd.DataFrame({\n",
     "        'sym': x['sym'].iloc[0],\n",
@@ -1085,7 +1066,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
