--- a/TSS_transformed/Temporal_Similarity_Search_Transformed_Demo.ipynb
+++ b/TSS_transformed/Temporal_Similarity_Search_Transformed_Demo.ipynb
@@ -404,7 +404,7 @@
     }
    ],
    "source": [
-    "n = 1000  # chunk row size\n",
+    "n = 1000  # number of rows per batch\n",
     "\n",
     "for i in tqdm(range(0, vecdf.shape[0], n)):\n",
     "    table.insert(vecdf[i:i+n].reset_index(drop=True))\n",
@@ -745,7 +745,7 @@
     }
    ],
    "source": [
-    "n = 1000  # chunk row size\n",
+    "n = 1000  # number of rows per batch\n",
     "\n",
     "for i in tqdm(range(0, vecdf.shape[0], n)):\n",
     "    table.insert(vecdf[i:i+n].reset_index(drop=True))\n",
