update samples for Colab integration

--- a/TSS_non_transformed/Temporal_Similarity_Search_Non-Transformed_Demo.ipynb
+++ b/TSS_non_transformed/Temporal_Similarity_Search_Non-Transformed_Demo.ipynb
@@ -36,6 +36,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "b5ebbb78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install kdbai_client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eee37861",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### !!! Only run this cell if running the notebook in Colab\n",
+    "### This downloads sample market data into Colab\n",
+    "!mkdir ./data \n",
+    "!wget -P ./data https://raw.githubusercontent.com/KxSystems/kdbai-samples/main/TSS_non_transformed/data/marketTrades.parquet"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "0bd8b5ce-096a-4de1-9f32-0eb3a513ca7a",
    "metadata": {},
