--- a/document_search/document_search.ipynb
+++ b/document_search/document_search.ipynb
@@ -53,6 +53,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "8bad9d73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install kdbai_client pypdf sentence_transformers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f23f6513",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### !!! Only run this cell if running the notebook in Colab\n",
+    "### This downloads research paper pdf into Colab\n",
+    "!mkdir ./data \n",
+    "!wget -P ./data https://raw.githubusercontent.com/KxSystems/kdbai-samples/main/document_search/data/research_paper.pdf"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "2b1c0d58-c704-46e9-8705-93918444abd2",
    "metadata": {},
@@ -89,7 +112,9 @@
    "source": [
     "# load data\n",
     "import pypdf\n",
-    "from nltk.tokenize import sent_tokenize"
+    "import nltk\n",
+    "from nltk.tokenize import sent_tokenize\n",
+    "nltk.download('punkt')"
    ]
   },
   {
