--- a/hybrid_search/hybrid_search_inflation.ipynb
+++ b/hybrid_search/hybrid_search_inflation.ipynb
@@ -35,6 +35,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install kdbai_client sentence-transformers langchain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### !!! Only run this cell if running the notebook in Colab\n",
+    "### This downloads Federal Reserve Inflation speech data into Colab\n",
+    "!mkdir ./data \n",
+    "!wget -P ./data https://raw.githubusercontent.com/KxSystems/kdbai-samples/main/hybrid_search/data/inflation.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [],
