--- a/image_search/image_search.ipynb
+++ b/image_search/image_search.ipynb
@@ -39,11 +39,70 @@
    "id": "1cce6739",
    "metadata": {},
    "source": [
-    "### Install dependencies \n",
+    "### Install dependencies "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70cc969e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install kdbai_client matplotlib umap-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a4010ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### !!! Only run this cell if running the notebook in Colab\n",
+    "### This downloads image data into Colab\n",
     "\n",
-    "In order to successfully run this sample, the [Setup](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#setup) steps in the repository's `README.md` file must be completed.\n",
-    "This will ensure that you have installed all of the relevant packages and versions needed for this sample.\n",
-    "If you have not completed these setup steps, please navigate to the repositories `README.md` file and follow the steps detailed there."
+    "import requests\n",
+    "import os\n",
+    "from PIL import Image\n",
+    "import io\n",
+    "\n",
+    "!mkdir -p ./data/meningioma_tumor\n",
+    "!mkdir -p ./data/glioma_tumor\n",
+    "!mkdir -p ./data/no_tumor\n",
+    "!mkdir -p ./data/pituitary_tumor\n",
+    "\n",
+    "\n",
+    "def get_github_repo_contents(repo_owner, repo_name, branch, folder_path):\n",
+    "    # Construct the API URL\n",
+    "    api_url = f\"https://api.github.com/repos/{repo_owner}/{repo_name}/contents/{folder_path}?ref={branch}\"\n",
+    "    \n",
+    "    # Send the request and process the response\n",
+    "    contents = requests.get(api_url).json()\n",
+    "\n",
+    "    # Create the local directory if it doesn't exist\n",
+    "    fPath = f\"./data/{folder_path.split('/')[-1]}\"\n",
+    "\n",
+    "    for item in contents:\n",
+    "        # Recursively list contents of subfolder\n",
+    "        if item['type'] == 'dir':\n",
+    "            get_github_repo_contents(repo_owner, repo_name, branch, f\"{folder_path}/{item['name']}\")\n",
+    "        # Download and save file\n",
+    "        elif item['type'] == 'file':\n",
+    "            file_url = f\"https://raw.githubusercontent.com/{repo_owner}/{repo_name}/{branch}{folder_path}/{item['name']}\"\n",
+    "            print(file_url)\n",
+    "            r = requests.get(file_url, timeout=4.0)\n",
+    "            r.raise_for_status()  # Raises an exception for HTTP errors\n",
+    "            with Image.open(io.BytesIO(r.content)) as im:\n",
+    "                im.save(f\"{fPath}/{item['name']}\")\n",
+    "\n",
+    "# Get data\n",
+    "get_github_repo_contents(\n",
+    "    repo_owner='KxSystems',\n",
+    "    repo_name='kdbai-samples',\n",
+    "    branch='main',\n",
+    "    folder_path='/image_search/data'\n",
+    ")"
    ]
   },
   {
