--- a/multimodal_RAG_unified_text/multi_modal_demo.ipynb
+++ b/multimodal_RAG_unified_text/multi_modal_demo.ipynb
@@ -35,6 +35,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install kdbai_client langchain openai"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -53,7 +62,60 @@
     "from IPython.display import display\n",
     "import time\n",
     "import warnings\n",
+    "import requests\n",
     "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### !!! Only run this cell if running the notebook in Colab\n",
+    "### This downloads image and text data into Colab\n",
+    "\n",
+    "!mkdir -p ./data/images\n",
+    "!mkdir -p ./data/text\n",
+    "\n",
+    "def get_github_repo_contents(repo_owner, repo_name, branch, folder_path):\n",
+    "    # Construct the API URL\n",
+    "    api_url = f\"https://api.github.com/repos/{repo_owner}/{repo_name}/contents/{folder_path}?ref={branch}\"\n",
+    "    \n",
+    "    # Send the request and process the response\n",
+    "    contents = requests.get(api_url).json()\n",
+    "\n",
+    "    # Create the local directory if it doesn't exist\n",
+    "    fPath = f\"./data/{folder_path.split('/')[-1]}\"\n",
+    "\n",
+    "    for item in contents:\n",
+    "        # Recursively list contents of subfolder\n",
+    "        if item['type'] == 'dir':\n",
+    "            get_github_repo_contents(repo_owner, repo_name, branch, f\"{folder_path}/{item['name']}\")\n",
+    "        # Download and save file\n",
+    "        elif item['type'] == 'file':\n",
+    "            file_url = f\"https://raw.githubusercontent.com/{repo_owner}/{repo_name}/{branch}/{folder_path}/{item['name']}\"\n",
+    "            print(file_url)\n",
+    "            r = requests.get(file_url, timeout=4.0)\n",
+    "            r.raise_for_status()  # Raises an exception for HTTP errors\n",
+    "            file_path = f\"{fPath}/{item['name']}\"\n",
+    "\n",
+    "            if item['name'].lower().endswith(('.png', '.jpg', '.jpeg', '.gif', '.bmp')):\n",
+    "                # Save image file\n",
+    "                with Image.open(io.BytesIO(r.content)) as im:\n",
+    "                    im.save(file_path)\n",
+    "            else:\n",
+    "                # Save text file\n",
+    "                with open(file_path, 'wb') as f:\n",
+    "                    f.write(r.content)\n",
+    "\n",
+    "# Get images and texts\n",
+    "get_github_repo_contents(\n",
+    "    repo_owner='KxSystems',\n",
+    "    repo_name='kdbai-samples',\n",
+    "    branch='main',\n",
+    "    folder_path='multimodal_RAG_unified_text/data'\n",
+    ")"
    ]
   },
   {
@@ -329,7 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Loop through all image files, get image summaries, embed the summaries, store relevant data in dataframe\n",
+    "#Loop through all image files, get image summaries, embed the summaries, store relevant data in dataframe. Takes a couple of minutes\n",
     "for image in images:\n",
     "    path = \"./data/images/\" + image\n",
     "    media_type = \"images\"\n",
