--- a/music_recommendation/music_recommendation.ipynb
+++ b/music_recommendation/music_recommendation.ipynb
@@ -39,11 +39,30 @@
    "id": "45d625ff",
    "metadata": {},
    "source": [
-    "### Install dependencies \n",
-    "\n",
-    "In order to successfully run this sample, the [Setup](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#setup) steps in the repository's `README.md` file must be completed.\n",
-    "This will ensure that you have installed all of the relevant packages and versions needed for this sample.\n",
-    "If you have not completed these setup steps, please navigate to the repositories `README.md` file and follow the steps detailed there."
+    "### Install dependencies "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bcb2fc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install kdbai_client gensim nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15c41564",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### !!! Only run this cell if running the notebook in Colab\n",
+    "### This downloads song data into Colab\n",
+    "!mkdir ./data \n",
+    "!wget -P ./data https://raw.githubusercontent.com/KxSystems/kdbai-samples/main/music_recommendation/data/song_data.csv"
    ]
   },
   {
@@ -82,6 +101,8 @@
    "outputs": [],
    "source": [
     "# embedding categorical data\n",
+    "import nltk\n",
+    "nltk.download('punkt')\n",
     "from nltk.tokenize import word_tokenize\n",
     "from gensim.models import Word2Vec"
    ]
