--- a/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
@@ -61,6 +61,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "4fac8d1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install kdbai_client langchain langchain_openai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8e9b27f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### !!! Only run this cell if running the notebook in Colab\n",
+    "### This downloads state of the union speech into Colab\n",
+    "!mkdir ./data \n",
+    "!wget -P ./data https://raw.githubusercontent.com/KxSystems/kdbai-samples/main/retrieval_augmented_generation/data/state_of_the_union.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "36ecd7fc",
    "metadata": {},
@@ -241,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embeddings = OpenAIEmbeddings(model=\"text-embedding-ada-002\")"
+    "embeddings = OpenAIEmbeddings(model=\"text-embedding-3-small\")"
    ]
   },
   {
