--- a/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
@@ -55,6 +55,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c93b2276",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install kdbai_client langchain langchain_openai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c95778f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### !!! Only run this cell if running the notebook in Colab\n",
+    "### This downloads state of the union speech into Colab\n",
+    "!mkdir ./data \n",
+    "!wget -P ./data https://raw.githubusercontent.com/KxSystems/kdbai-samples/main/retrieval_augmented_generation/data/state_of_the_union.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "894980f2",
    "metadata": {},
@@ -126,7 +149,7 @@
    "id": "f56faa93",
    "metadata": {},
    "source": [
-    "### Defne Helper Functions"
+    "### Define Helper Functions"
    ]
   },
   {
@@ -221,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embeddings = OpenAIEmbeddings(model=\"text-embedding-ada-002\")"
+    "embeddings = OpenAIEmbeddings(model=\"text-embedding-3-small\")"
    ]
   },
   {
