--- a/TSS_transformed/Temporal_Similarity_Search_Transformed_Demo.ipynb
+++ b/TSS_transformed/Temporal_Similarity_Search_Transformed_Demo.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Transformed Temporal Similarity Search is our patent-pending compression model designed to dimensionally reduce time series windows by more than 99%. With Transformed Temporal Similarity Search, KDB.AI can compress times series windows containing thousands of data points, into significantly smaller dimensions, all while maintaining the integrity of the original data’s shape. These compressed windows are then stored within KDB.AI as vector embeddings, setting up the ability to execute vector searches and enabling the efficient analysis of time series datasets.\n",
     "\n",
-    "This notebook generates dummy market data using PyKX, creates an index using the Transformed Temporal Similiarity Search feature exposed by KDB.AI, and searches for a pattern of interest in the data.\n",
+    "This notebook uses sample market data, creates an index using the Transformed Temporal Similiarity Search feature exposed by KDB.AI, and searches for a pattern of interest in the data.\n",
     "\n",
     "Agenda:\n",
     "1. Imports & Setup\n",
@@ -27,6 +27,29 @@
    "metadata": {},
    "source": [
     "## 1. Imports & Setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9144c71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install kdbai_client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abb14487",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### !!! Only run this cell if running the notebook in Colab\n",
+    "### This downloads sample market data into Colab\n",
+    "!mkdir ./data \n",
+    "!wget -P ./data https://raw.githubusercontent.com/KxSystems/kdbai-samples/main/TSS_transformed/data/marketTrades.parquet"
    ]
   },
   {
