--- a/quickstarts/python_quickstart.ipynb
+++ b/quickstarts/python_quickstart.ipynb
@@ -32,11 +32,17 @@
    "id": "d1468bd3",
    "metadata": {},
    "source": [
-    "### Install dependencies \n",
-    "\n",
-    "In order to successfully run this sample, the [Setup](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#setup) steps in the repository's `README.md` file must be completed.\n",
-    "This will ensure that you have installed all of the relevant packages and versions needed for this sample.\n",
-    "If you have not completed these setup steps, please navigate to the repositories `README.md` file and follow the steps detailed there."
+    "### Install dependencies \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "491cd6d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install kdbai_client"
    ]
   },
   {
